# Formalki-prac2

./: Bitset.h  CMakeLists.txt  NFA.cpp  NFA.h  main.cpp
Google_test/: Automata1  Automata2  CMakeLists.txt  test1.cpp  test2.cpp  testing_funcs.h  testing_uncs.cpp
src/: Bitset.cpp  Bitset.h  DFA.cpp  DFA.h  NFA.cpp  NFA.h  globals.h  utility.cpp  utility.h
